@@ -56,7 +56,7 @@ prefix			= /opt/Ice-$(VERSION)
 # directory.
 #
 
-OPENSSL_HOME		?= /opt/openssl
+#OPENSSL_HOME		?= /opt/openssl
 
 #
 # If Xerces-C++ is not installed in a standard location where the
@@ -65,6 +65,18 @@ OPENSSL_HOME		?= /opt/openssl
 #
 
 #XERCESC_HOME		?= /opt/xerces-c
+
+
+#
+# If E2fsprogs is not installed in a standard location where the
+# compiler can find it, set E2FSPROGS_HOME to the E2fsprogs
+# installation directory.
+# E2fsprogs is used only for its UUID library.
+#
+#
+
+#E2FSPROGS_HOME		?= /opt/e2fsprogs
+
 
 # ----------------------------------------------------------------------
 # Don't change anything below this line!
@@ -89,6 +101,8 @@ INSTALL			= /usr/bin/install -c
 INSTALL_PROGRAM		= ${INSTALL}
 INSTALL_LIBRARY		= ${INSTALL} -m 644
 INSTALL_DATA		= ${INSTALL} -m 644
+
+UNAME                   := $(shell uname)
 
 ifneq ($(STLPORT_HOME),)
     STLPORT_FLAGS	= -I$(STLPORT_HOME)/include/stlport
@@ -126,25 +140,27 @@ else
     XERCESC_LIBS	= -lxerces-c
 endif
 
-CXX			= c++
-CXXFLAGS 		= -ftemplate-depth-128 -fPIC -Wall
-ifeq ($(OPTIMIZE),yes)
-    CXXFLAGS		:= -O2 -DNDEBUG $(CXXFLAGS)
+ifneq ($(E2FSPROGS_HOME),)
+    E2FSPROGS_FLAGS	= -I$(E2FSPROGS_HOME)/include
+    E2FSPROGS_LIBS	= -L$(E2FSPROGS_HOME)/lib -luuid
 else
-    CXXFLAGS		:= -g $(CXXFLAGS)
+    E2FSPROGS_FLAGS	=
+    E2FSPROGS_LIBS	= -luuid
 endif
+
+
+#
+# Platform specific definitions
+#
+include  $(top_srcdir)/config/Make.rules.$(UNAME)
+
 
 CPPFLAGS		= -I$(includedir) $(STLPORT_FLAGS)
 ICECPPFLAGS		= -I$(slicedir)
 SLICE2CPPFLAGS		= $(ICECPPFLAGS)
 
 LDFLAGS			= -L$(libdir)
-SHLIB_LDFLAGS		= -shared -Xlinker -soname -Xlinker $(@F)
 
-LIBEXT			= so
-
-BASELIBS		= -lIceUtil -lpthread -luuid $(STLPORT_LIBS)
-LIBS			= -lIce -ldl -lbz2 $(BASELIBS)
 
 SLICE2CPP		= $(bindir)/slice2cpp
 SLICE2XSD		= $(bindir)/slice2xsd
