@@ -1,0 +1,33 @@
+# **********************************************************************
+#
+# Copyright (c) 2003
+# ZeroC, Inc.
+# Billerica, MA, USA
+#
+# All Rights Reserved.
+#
+# Ice is free software; you can redistribute it and/or modify it under
+# the terms of the GNU General Public License version 2 as published by
+# the Free Software Foundation.
+#
+# **********************************************************************
+
+#
+# This file is included by Make.rules when uname is SunOS.
+#
+
+CXX			= CC
+CXXFLAGS		= -KPIC -mt +w +p
+
+ifeq ($(OPTIMIZE),yes)
+     CXXFLAGS		:= -O -DNDEBUG $(CXXFLAGS)
+else
+     CXXFLAGS		:= -g $(CXXFLAGS)
+endif
+
+SHLIB_LDFLAGS		= -G -h $(@F)
+
+LIBEXT			= so
+
+BASELIBS		= -lIceUtil $(STLPORT_LIBS) -lpthread
+LIBS			= -lIce -lbz2 $(BASELIBS) -ldl
